Prevent scheduled download link checker from spamming issues (#3845)
* Use checkout@v3 in all workflows

* Start testing issue finder in GHScript

* Improve name, fix script var name

* Improved test

* fix ref issue

* Re-add issue creation

* Update create-issue-from-file, change step names

* Add schedule trigger

* Use reusable workflow locally

* Use proper var names

* Remove concurrency

* use core.getInput

* More testing

* Add inputs on consumer side

* Use env variables to smuggle in workflow_call inputs

* Use brackets

* Remove console log, rename some things

* Remove inputs and check head_ref

* Fix typo

* Add descriptions, remove test echo, use tag to ID

* Make lychee args configurable

* Return number of PR

* Make dummy failure for lychee step

* mkdir to fix test script

* Add tag to env and attempt PR subtitle

* Use label instead of tag

* Log and add in configurable create labels

* Rename find comment step

* Remove issue maker step

* Remove "labels"

* Re-add labels and creation issue, improve test message

* Improve message, add feature for closing if check passes

* Prettier, test failing exit code, and only close if issue exists

* Re-test failing code

* Re-add actually running lychee

* Change default title

* Change trigger for consumer event and add owner and repo for schedule context

--- a/.github/workflows/download-link-check-schedule.yml
+++ b/.github/workflows/download-link-check-schedule.yml
@@ -1,26 +1,20 @@
-name: DVC Download Link Check
+name: Scheduled Download Link Check
 
 on:
+  workflow_dispatch:
   schedule:
     - cron: '0 0-23 * * *'
 
+concurrency:
+  group: scheduled-download-link-check-${{ github.head_ref }}
+  cancel-in-progress: true
+
 jobs:
-  run:
-    name: Initialize
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Download Link Checker
-        uses: lycheeverse/lychee-action@v1.0.8
-        with:
-          args:
-            --verbose https://dvc.org/ --base https://dvc.org/ --include
-            /download/
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-      - name: Create Issue From File
-        uses: peter-evans/create-issue-from-file@v3
-        with:
-          title: DVC Download Link Checker Report
-          content-filepath: ./lychee/out.md
-          labels: website, link-checker
+  check:
+    uses: './.github/workflows/download-link-check-issue.yml'
+    with:
+      title: 'DVC Download Link Checker Report'
+      owner: 'iterative'
+      repo: 'dvc.org'
+      lychee_args: >-
+        --verbose https://dvc.org/ --base https://dvc.org/ --include /download/
