group iterative packages

--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,10 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base", "group:allNonMajor"]
+  "extends": ["config:base", "group:allNonMajor"],
+  "packageRules": [
+    {
+      "matchPackagePatterns": ["^@dvcorg/", "iterative/"],
+      "groupName": "Iterative Packages"
+    }
+  ]
 }
