--- a/.github/workflows/link-check-deploy.yml
+++ b/.github/workflows/link-check-deploy.yml
@@ -3,4 +3,7 @@ on:
   deployment_status:
 jobs:
   run:
+    if:
+      github.event.deployment.ref != ${{ github.event.repository.default_branch }} &&
+      github.event.deployment_status.state == 'success'
     uses: iterative/link-check/.github/workflows/link-check-deployment-status.yml@v0.13.1
