--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "node": ">=14.x <=18.x"
   },
   "dependencies": {
-    "@dvcorg/gatsby-theme-iterative": "^0.2.0",
+    "@dvcorg/gatsby-theme-iterative": "/home/roger/Projects/gatsby-theme-iterative-workspace/packages/gatsby-theme-iterative",
     "@dvcorg/websites-server": "^0.0.11",
     "@hapi/wreck": "^18.0.0",
     "@octokit/graphql": "^5.0.0",
