--- a/.github/workflows/check-deployment.yml
+++ b/.github/workflows/check-deployment.yml
@@ -12,24 +12,6 @@ on:
 
 jobs:
   check-branches:
-    if:
-      startsWith(github.head_ref, 'renovate/') || contains(github.head_ref,
-      'no-deploy')
-    runs-on: ubuntu-latest
-    steps:
-      - name: Pass CI with input
-        if: ${{ inputs.passci }}
-        run: exit 0
-      - uses: khan/pull-request-comment-trigger@v1.1.0
-        id: check
-        with:
-          trigger: '#pass-ci'
-          reaction: rocket
-        env:
-          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
-      - name: Fail if not triggred
-        if: steps.check.outputs.triggered != 'true'
-        run: exit 1
-      - name: Exit gracefully
-        if: steps.check.outputs.triggered == 'true'
-        run: 'echo CI passed'
+    uses: iterative/gatsby-theme-iterative/.github/workflows/check-deployment.yml@check-deployment-workflow
+    with:
+      passci: ${{ inputs.passci }}
