--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "node": ">=14.x <=18.x"
   },
   "dependencies": {
-    "@dvcorg/gatsby-theme-iterative": "^0.2.8",
+    "@dvcorg/gatsby-theme-iterative": "^0.3.0",
     "@dvcorg/websites-server": "^0.0.16",
     "@hapi/wreck": "^18.0.0",
     "@octokit/graphql": "^5.0.0",
@@ -57,10 +57,11 @@
     "ease-component": "^1.0.0",
     "express": "^4.18.1",
     "fs-extra": "^10.1.0",
-    "gatsby": "^4.19.1",
-    "gatsby-plugin-algolia": "^0.26.0",
-    "gatsby-plugin-image": "^2.19.0",
-    "gatsby-plugin-parent-resolvers": "^1.0.1",
+    "gatsby": "^5.3.3",
+    "gatsby-plugin-algolia": "^1.0.2",
+    "gatsby-plugin-image": "^3.3.2",
+    "gatsby-plugin-parent-resolvers": "^1.0.2",
+    "gatsby-plugin-sharp": "^5.3.2",
     "gatsby-source-rss-feed": "^1.2.2",
     "github-markdown-css": "^5.1.0",
     "http-proxy-middleware": "^2.0.6",
@@ -128,28 +129,27 @@
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.31.8",
-    "gatsby-plugin-catch-links": "4.23.0",
-    "gatsby-plugin-feed": "4.23.1",
-    "gatsby-plugin-manifest": "4.23.1",
-    "gatsby-plugin-postcss": "5.23.0",
-    "gatsby-plugin-react-helmet": "5.23.0",
-    "gatsby-plugin-sitemap": "5.23.1",
-    "gatsby-plugin-svgr": "3.0.0-beta.0",
-    "gatsby-plugin-twitter": "4.23.1",
-    "gatsby-plugin-webpack-bundle-analyser-v2": "1.1.27",
-    "gatsby-remark-autolink-headers": "5.23.1",
-    "gatsby-remark-copy-linked-files": "5.23.0",
-    "gatsby-remark-embed-gist": "1.2.1",
-    "gatsby-remark-embedder": "6.0.1",
-    "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "6.23.1",
-    "gatsby-remark-prismjs": "6.23.0",
-    "gatsby-remark-relative-images": "2.0.2",
-    "gatsby-remark-responsive-iframe": "5.23.0",
-    "gatsby-remark-smartypants": "5.23.0",
-    "gatsby-source-filesystem": "4.23.0",
-    "gatsby-transformer-remark": "5.23.1",
-    "gatsby-transformer-sharp": "4.23.1",
+    "gatsby-plugin-catch-links": "^5.3.0",
+    "gatsby-plugin-feed": "^5.3.1",
+    "gatsby-plugin-manifest": "^5.3.1",
+    "gatsby-plugin-postcss": "^6.3.0",
+    "gatsby-plugin-react-helmet": "^6.3.0",
+    "gatsby-plugin-sitemap": "^6.3.1",
+    "gatsby-plugin-svgr": "^3.0.0-beta.0",
+    "gatsby-plugin-twitter": "^5.3.1",
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.30",
+    "gatsby-remark-autolink-headers": "^6.3.1",
+    "gatsby-remark-copy-linked-files": "^6.3.0",
+    "gatsby-remark-embed-gist": "^1.2.1",
+    "gatsby-remark-external-links": "^0.0.4",
+    "gatsby-remark-images": "^7.3.1",
+    "gatsby-remark-prismjs": "^7.3.0",
+    "gatsby-remark-relative-images": "^2.0.2",
+    "gatsby-remark-responsive-iframe": "^6.3.0",
+    "gatsby-remark-smartypants": "^6.3.0",
+    "gatsby-source-filesystem": "^5.3.1",
+    "gatsby-transformer-remark": "^6.3.2",
+    "gatsby-transformer-sharp": "^5.3.1",
     "hast-util-select": "5.0.2",
     "husky": "8.0.1",
     "iframe-resizer-react": "1.1.0",
