--- a/package.json
+++ b/package.json
@@ -100,7 +100,8 @@
     "slick-carousel": "^1.8.1",
     "title-case": "^3.0.2",
     "unist-util-visit": "4.1.1",
-    "upath": "^2.0.1"
+    "upath": "^2.0.1",
+    "webpack-filter-warnings-plugin": "^1.2.1"
   },
   "devDependencies": {
     "@babel/core": "7.19.1",
