--- a/package.json
+++ b/package.json
@@ -43,10 +43,10 @@
     "@dvcorg/websites-server": "^0.0.16",
     "@hapi/wreck": "^18.0.0",
     "@octokit/graphql": "^5.0.0",
-    "@reach/portal": "^0.17.0",
+    "@reach/portal": "^0.18.0",
     "@reach/router": "^1.3.4",
-    "@reach/skip-nav": "^0.17.0",
-    "@reach/tooltip": "^0.17.0",
+    "@reach/skip-nav": "^0.18.0",
+    "@reach/tooltip": "^0.18.0",
     "algoliasearch": "^4.14.1",
     "classnames": "^2.2.6",
     "color": "^4.2.3",
@@ -104,32 +104,32 @@
     "webpack-filter-warnings-plugin": "^1.2.1"
   },
   "devDependencies": {
-    "@babel/core": "7.19.1",
-    "@svgr/webpack": "6.3.1",
+    "@babel/core": "^7.20.7",
+    "@svgr/webpack": "^6.5.1",
     "@types/classnames": "2.3.1",
     "@types/github-slugger": "1.3.0",
     "@types/isomorphic-fetch": "0.0.36",
     "@types/promise-polyfill": "6.0.4",
-    "@types/react": "18.0.20",
+    "@types/react": "^18.0.26",
     "@types/react-collapse": "5.0.1",
-    "@types/react-dom": "18.0.6",
-    "@types/react-helmet": "6.1.5",
+    "@types/react-dom": "^18.0.9",
+    "@types/react-helmet": "^6.1.6",
     "@types/react-instantsearch-dom": "6.12.3",
-    "@types/react-popover": "0.5.4",
+    "@types/react-popover": "^0.5.5",
     "@types/react-slick": "0.23.10",
-    "@typescript-eslint/eslint-plugin": "5.38.0",
-    "@typescript-eslint/parser": "5.38.0",
-    "autoprefixer": "10.4.12",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
+    "autoprefixer": "^10.4.13",
     "babel-eslint": "10.1.0",
-    "babel-jest": "29.0.3",
+    "babel-jest": "^29.3.1",
     "babel-plugin-transform-define": "2.1.0",
     "babel-plugin-transform-object-assign": "6.22.0",
-    "eslint": "8.23.1",
+    "eslint": "^8.30.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-json": "3.1.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-react": "7.31.8",
+    "eslint-plugin-react": "^7.31.11",
     "gatsby-plugin-catch-links": "^5.3.0",
     "gatsby-plugin-feed": "^5.3.1",
     "gatsby-plugin-manifest": "^5.3.1",
@@ -152,25 +152,25 @@
     "gatsby-transformer-remark": "^6.3.2",
     "gatsby-transformer-sharp": "^5.3.1",
     "hast-util-select": "5.0.2",
-    "husky": "8.0.1",
+    "husky": "^8.0.2",
     "iframe-resizer-react": "1.1.0",
-    "jest": "29.0.3",
-    "lint-staged": "13.0.3",
+    "jest": "^29.3.1",
+    "lint-staged": "^13.1.0",
     "postcss-color-mod-function": "3.0.3",
     "postcss-custom-media": "8.0.2",
-    "postcss-custom-properties": "12.1.9",
+    "postcss-custom-properties": "^12.1.11",
     "postcss-mixins": "9.0.4",
     "postcss-nested": "5.0.6",
-    "prettier": "2.7.1",
+    "prettier": "^2.8.1",
     "rehype-parse": "8.0.4",
     "rehype-stringify": "9.0.3",
     "remark": "14.0.2",
     "remark-html": "15.0.1",
     "remark-parse": "10.0.1",
-    "stylelint": "14.12.1",
+    "stylelint": "^14.16.0",
     "stylelint-config-standard": "28.0.0",
-    "tailwindcss": "3.1.8",
-    "typescript": "4.8.3",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.4",
     "unist-util-remove-position": "4.0.1"
   },
   "lint-staged": {
