--- a/package.json
+++ b/package.json
@@ -40,23 +40,23 @@
   },
   "dependencies": {
     "@dvcorg/gatsby-theme-iterative": "^0.3.0",
-    "@dvcorg/websites-server": "^0.0.16",
+    "@dvcorg/websites-server": "^0.0.17",
     "@hapi/wreck": "^18.0.0",
-    "@octokit/graphql": "^5.0.0",
+    "@octokit/graphql": "^5.0.4",
     "@reach/portal": "^0.18.0",
     "@reach/router": "^1.3.4",
     "@reach/skip-nav": "^0.18.0",
     "@reach/tooltip": "^0.18.0",
-    "algoliasearch": "^4.14.1",
-    "classnames": "^2.2.6",
+    "algoliasearch": "^4.14.3",
+    "classnames": "^2.3.2",
     "color": "^4.2.3",
     "compression": "^1.7.4",
-    "date-fns": "^2.28.0",
+    "date-fns": "^2.29.3",
     "docsearch.js": "^2.6.3",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.3",
     "ease-component": "^1.0.0",
-    "express": "^4.18.1",
-    "fs-extra": "^10.1.0",
+    "express": "^4.18.2",
+    "fs-extra": "^11.1.0",
     "gatsby": "^5.3.3",
     "gatsby-plugin-algolia": "^1.0.2",
     "gatsby-plugin-image": "^3.3.2",
@@ -71,9 +71,8 @@
     "mkdirp": "^1.0.4",
     "moment": "^2.29.4",
     "nanoid": "^4.0.0",
-    "node-cache": "^5.1.0",
     "perfect-scrollbar": "^1.5.5",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.20",
     "pretty-quick": "^3.1.3",
     "promise-polyfill": "^8.2.3",
     "prop-types": "^15.8.1",
@@ -82,10 +81,10 @@
     "react-collapse": "^5.1.1",
     "react-collapsible": "^2.10.0",
     "react-dom": "^18.2.0",
-    "react-focus-lock": "^2.9.1",
+    "react-focus-lock": "^2.9.2",
     "react-ga": "^3.3.1",
     "react-helmet": "^6.1.0",
-    "react-instantsearch-dom": "^6.30.2",
+    "react-instantsearch-dom": "^6.38.1",
     "react-popover": "^0.5.10",
     "react-slick": "^0.29.0",
     "react-use": "^17.4.0",
@@ -95,40 +94,39 @@
     "reset-css": "^5.0.1",
     "s3-client": "^4.4.2",
     "scroll": "^3.0.1",
-    "serve-handler": "^6.1.2",
-    "sharp": "^0.31.0",
+    "sharp": "^0.31.3",
     "slick-carousel": "^1.8.1",
-    "title-case": "^3.0.2",
-    "unist-util-visit": "4.1.1",
+    "title-case": "^3.0.3",
+    "unist-util-visit": "^4.1.1",
     "upath": "^2.0.1",
     "webpack-filter-warnings-plugin": "^1.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.7",
     "@svgr/webpack": "^6.5.1",
-    "@types/classnames": "2.3.1",
-    "@types/github-slugger": "1.3.0",
-    "@types/isomorphic-fetch": "0.0.36",
-    "@types/promise-polyfill": "6.0.4",
+    "@types/classnames": "^2.3.1",
+    "@types/github-slugger": "^2.0.0",
+    "@types/isomorphic-fetch": "^0.0.36",
+    "@types/promise-polyfill": "^6.0.4",
     "@types/react": "^18.0.26",
-    "@types/react-collapse": "5.0.1",
-    "@types/react-dom": "^18.0.9",
+    "@types/react-collapse": "^5.0.1",
+    "@types/react-dom": "^18.0.10",
     "@types/react-helmet": "^6.1.6",
-    "@types/react-instantsearch-dom": "6.12.3",
+    "@types/react-instantsearch-dom": "^6.12.3",
     "@types/react-popover": "^0.5.5",
-    "@types/react-slick": "0.23.10",
+    "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "autoprefixer": "^10.4.13",
-    "babel-eslint": "10.1.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^29.3.1",
-    "babel-plugin-transform-define": "2.1.0",
-    "babel-plugin-transform-object-assign": "6.22.0",
+    "babel-plugin-transform-define": "^2.1.0",
+    "babel-plugin-transform-object-assign": "^6.22.0",
     "eslint": "^8.30.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-json": "3.1.0",
-    "eslint-plugin-jsx-a11y": "6.6.1",
-    "eslint-plugin-prettier": "4.2.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "gatsby-plugin-catch-links": "^5.3.0",
     "gatsby-plugin-feed": "^5.3.1",
@@ -151,27 +149,27 @@
     "gatsby-source-filesystem": "^5.3.1",
     "gatsby-transformer-remark": "^6.3.2",
     "gatsby-transformer-sharp": "^5.3.1",
-    "hast-util-select": "5.0.2",
+    "hast-util-select": "^5.0.2",
     "husky": "^8.0.2",
-    "iframe-resizer-react": "1.1.0",
+    "iframe-resizer-react": "^1.1.0",
     "jest": "^29.3.1",
     "lint-staged": "^13.1.0",
-    "postcss-color-mod-function": "3.0.3",
-    "postcss-custom-media": "8.0.2",
+    "postcss-color-mod-function": "^3.0.3",
+    "postcss-custom-media": "^9.0.1",
     "postcss-custom-properties": "^12.1.11",
-    "postcss-mixins": "9.0.4",
-    "postcss-nested": "5.0.6",
+    "postcss-mixins": "^9.0.4",
+    "postcss-nested": "^6.0.0",
     "prettier": "^2.8.1",
-    "rehype-parse": "8.0.4",
-    "rehype-stringify": "9.0.3",
-    "remark": "14.0.2",
-    "remark-html": "15.0.1",
-    "remark-parse": "10.0.1",
+    "rehype-parse": "^8.0.4",
+    "rehype-stringify": "^9.0.3",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
+    "remark-parse": "^10.0.1",
     "stylelint": "^14.16.0",
-    "stylelint-config-standard": "28.0.0",
+    "stylelint-config-standard": "^29.0.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
-    "unist-util-remove-position": "4.0.1"
+    "unist-util-remove-position": "^4.0.1"
   },
   "lint-staged": {
     "*.{js,ts,tsx,json}": [
