--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -4,9 +4,10 @@ on:
     - cron: '0 18 * * *'
 jobs:
   update:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: iterative/setup-cml@v1
       - name: Update
         id: update
         shell: bash
@@ -19,7 +20,8 @@ jobs:
           echo "version=$version" >> $GITHUB_OUTPUT
       - name: Create PR
         if: ${{ steps.update.outputs.changes != '' }}
-        uses: peter-evans/create-pull-request@v4
-        with:
-          commit-message: dvc ${{ steps.update.outputs.version }}
-          title: dvc ${{ steps.update.outputs.version }}
+        run: |
+          cml pr create \
+            --token="${{ secrets.GITHUB_TOKEN }}" \
+            --message="dvc ${{ steps.update.outputs.version }}" \
+            --title="dvc ${{ steps.update.outputs.version }}" .
