Add asciinema player

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@reach/tooltip": "^0.17.0",
     "@sentry/gatsby": "^7.13.0",
     "algoliasearch": "^4.14.1",
+    "asciinema-player": "^3.0.1",
     "classnames": "^2.2.6",
     "color": "^4.2.3",
     "compression": "^1.7.4",
