--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "sharp": "^0.31.3",
     "slick-carousel": "^1.8.1",
     "title-case": "^3.0.3",
+    "typed.js": "^2.0.12",
     "unist-util-visit": "^4.1.1",
     "upath": "^2.0.1",
     "webpack-filter-warnings-plugin": "^1.2.1"
