--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "http-proxy-middleware": "^2.0.6",
     "iso-url": "^1.2.1",
     "isomorphic-fetch": "^3.0.0",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "mkdirp": "^2.1.3",
     "moment": "^2.29.4",
