--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "start": "node ./src/server.js",
     "heroku-postbuild": "heroku-deploy",
     "test": "jest",
-    "format-all": "prettier --write '**/*.{js,jsx,md,tsx,ts,json}'",
     "check-format": "prettier -c \"**/*.{js,json,ts,tsx,css,md,mdx}\"",
     "check-lint": "eslint \"**/*.{js,jsx,ts,tsx,json}\"",
+    "format-check": "prettier --check '**/*.{js,jsx,md,tsx,ts,json}'",
+    "format-all": "prettier --write '**/*.{js,jsx,md,tsx,ts,json}'",
     "lint-ts": "tsc --noEmit --skipLibCheck && eslint --ext .json,.js,.ts,.tsx .",
     "lint-css": "stylelint \"src/**/*.css\"",
     "link-check": "repo-link-check -c config/link-check/config.yml",
