--- a/package.json
+++ b/package.json
@@ -165,6 +165,7 @@
     "remark-html": "^15.0.1",
     "remark-parse": "^10.0.1",
     "stylelint": "^14.16.1",
+    "stylelint-config-prettier": "^9.0.4",
     "stylelint-config-standard": "^29.0.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
