Format css files

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "start": "node ./src/server.js",
     "heroku-postbuild": "heroku-deploy",
     "test": "jest",
-    "check-format": "prettier -c \"**/*.{js,json,ts,tsx,css,md,mdx}\"",
+    "check-format": "prettier -c \"**/*.{js,jsx,md,tsx,ts,json,css}\"",
     "check-lint": "eslint \"**/*.{js,jsx,ts,tsx,json}\"",
-    "format-check": "prettier --check '**/*.{js,jsx,md,tsx,ts,json}'",
-    "format-all": "prettier --write '**/*.{js,jsx,md,tsx,ts,json}'",
+    "format-check": "prettier --check \"**/*.{js,jsx,md,tsx,ts,json,css}\"",
+    "format-all": "prettier --write \"**/*.{js,jsx,md,tsx,ts,json,css}\"",
     "lint-ts": "tsc --noEmit --skipLibCheck",
     "lint-css": "stylelint \"src/**/*.css\"",
     "link-check": "repo-link-check -c config/link-check/config.yml",
