--- a/.stylelintrc
+++ b/.stylelintrc
@@ -24,6 +24,12 @@
       }
     ],
     "selector-class-pattern": null,
-    "keyframes-name-pattern": null
+    "keyframes-name-pattern": null,
+    "function-no-unknown": [
+      true,
+      {
+        "ignoreFunctions": ["a", "color-mod"]
+      }
+    ]
   }
 }
