--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "start": "node ./src/server.js",
     "heroku-postbuild": "heroku-deploy",
     "test": "jest",
-    "check-format": "prettier -c \"**/*.{js,jsx,md,tsx,ts,json,css}\"",
-    "check-lint": "eslint \"**/*.{js,jsx,ts,tsx,json}\"",
     "format-check": "prettier --check \"**/*.{js,jsx,md,tsx,ts,json,css}\"",
     "format-all": "prettier --write \"**/*.{js,jsx,md,tsx,ts,json,css}\"",
-    "lint-ts": "tsc --noEmit --skipLibCheck",
+    "lint": "eslint \"**/*.{js,jsx,ts,tsx,json}\"",
+    "lint-all": "eslint --fix \"**/*.{js,jsx,ts,tsx,json}\"",
     "lint-css": "stylelint \"src/**/*.css\"",
+    "lint-ts": "tsc --noEmit --skipLibCheck",
     "link-check": "repo-link-check -c config/link-check/config.yml",
     "link-check-diff": "repo-link-check -c config/link-check/config.yml -d main",
     "link-check-dev-server": "repo-link-check -c config/link-check/config.yml -r http://localhost:3000",
