--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "start": "node ./src/server.js",
     "heroku-postbuild": "heroku-deploy",
     "test": "jest",
+    "format": "prettier --write",
     "format-check": "prettier --check \"**/*.{js,jsx,md,tsx,ts,json,css}\"",
-    "format-all": "prettier --write \"**/*.{js,jsx,md,tsx,ts,json,css}\"",
-    "lint": "eslint \"**/*.{js,jsx,ts,tsx,json}\"",
-    "lint-all": "eslint --fix \"**/*.{js,jsx,ts,tsx,json}\"",
-    "lint-css": "stylelint \"src/**/*.css\"",
+    "format-fix": "prettier --write \"**/*.{js,jsx,md,tsx,ts,json,css}\"",
+    "lint-check": "eslint \"**/*.{js,jsx,ts,tsx,json}\"",
+    "lint-fix": "eslint --fix \"**/*.{js,jsx,ts,tsx,json}\"",
+    "lint-css-check": "stylelint \"src/**/*.css\"",
+    "lint-css-fix": "stylelint --fix \"src/**/*.css\"",
     "lint-ts": "tsc --noEmit --skipLibCheck",
     "link-check": "repo-link-check -c config/link-check/config.yml",
     "link-check-diff": "repo-link-check -c config/link-check/config.yml -d main",
     "link-check-dev-server": "repo-link-check -c config/link-check/config.yml -r http://localhost:3000",
     "link-check-exclude": "repo-link-check -c config/link-check/config.yml --unused-patterns-only",
+    "format-staged": "lint-staged",
     "prepare": "husky install"
   },
   "repository": {
