Add commented Chromatic to lint-and-test and update names+docs

--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "heroku-postbuild": "heroku-deploy",
     "test": "jest",
     "format": "prettier --write",
-    "format-check": "prettier --check \"**/*.{js,jsx,md,tsx,ts,json,css}\"",
+    "format-check-all": "prettier --check \"**/*.{js,jsx,md,tsx,ts,json,css}\"",
     "format-fix": "prettier --write \"**/*.{js,jsx,md,tsx,ts,json,css}\"",
-    "lint-check": "eslint \"**/*.{js,jsx,ts,tsx,json}\"",
+    "lint": "eslint \"**/*.{js,jsx,ts,tsx,json}\"",
     "lint-fix": "eslint --fix \"**/*.{js,jsx,ts,tsx,json}\"",
-    "lint-css-check": "stylelint \"src/**/*.css\"",
+    "lint-css": "stylelint \"src/**/*.css\"",
     "lint-css-fix": "stylelint --fix \"src/**/*.css\"",
     "lint-ts": "tsc --noEmit --skipLibCheck",
+    "fix-all": "yarn format-fix && yarn lint-fix && yarn lint-css-fix && yarn lint-ts",
     "link-check": "repo-link-check -c config/link-check/config.yml",
     "link-check-diff": "repo-link-check -c config/link-check/config.yml -d main",
     "link-check-dev-server": "repo-link-check -c config/link-check/config.yml -r http://localhost:3000",
