--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -11,24 +11,39 @@ jobs:
     name: 'Run Tests'
     runs-on: ubuntu-latest
     steps:
+
       - name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
       - name: Install Node.js and use yarn
         uses: actions/setup-node@v3
         with:
           node-version: '18.x'
           cache: 'yarn'
-      - name: Install Dependencies
+
+      - name: Install All Dependencies
         run: yarn
-      - name: Check with Prettier
-        run: yarn format-check
+
+      - name: Check Formatting with Prettier
+        run: yarn format-check-all
+
       - name: Lint JS with ESLint
         run: yarn lint
+
       - name: Lint CSS with Stylelint
         run: yarn lint-css
+
       - name: Check TypeScript compilation
         run: yarn lint-ts
+
       - name: Run tests
         run: yarn test
+
+      # - name: Publish to Chromatic
+      #   uses: chromaui/action@v1
+      #   with:
+      #     token: ${{ secrets.GITHUB_TOKEN }}
+      #     projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+      #     exitOnceUploaded: true
