--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "jest",
     "format": "prettier --write",
     "format-check-all": "prettier --check \"**/*.{js,jsx,md,tsx,ts,json,css}\"",
-    "format-fix": "prettier --write \"**/*.{js,jsx,md,tsx,ts,json,css}\"",
+    "format-all": "prettier --write \"**/*.{js,jsx,md,tsx,ts,json,css}\"",
     "lint": "eslint \"**/*.{js,jsx,ts,tsx,json}\"",
     "lint-fix": "eslint --fix \"**/*.{js,jsx,ts,tsx,json}\"",
     "lint-css": "stylelint \"src/**/*.css\"",
