--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,10 +1,8 @@
 {
-  "extends": ["stylelint-config-standard", "stylelint-config-prettier"],
+  "extends": ["stylelint-config-standard"],
   "rules": {
     "no-descending-specificity": null,
     "no-duplicate-selectors": null,
-    "declaration-colon-newline-after": null,
-    "value-list-comma-newline-after": null,
     "property-no-unknown": [
       true,
       {
