--- a/package.json
+++ b/package.json
@@ -168,7 +168,8 @@
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "remark-parse": "^10.0.1",
-    "stylelint": "^15.0.0",
+    "stylelint": "^14.0.0",
+    "stylelint-config-prettier": "^9.0.4",
     "stylelint-config-standard": "^30.0.1",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.5",
