--- a/.stylelintrc
+++ b/.stylelintrc
@@ -18,9 +18,11 @@
     "at-rule-no-unknown": [
       true,
       {
-        "ignoreAtRules": ["mixin", "tailwind"]
+        "ignoreAtRules": ["mixin", "tailwind", "screen"]
       }
     ],
+    "custom-property-pattern": null,
+    "selector-id-pattern": null,
     "selector-class-pattern": null,
     "keyframes-name-pattern": null,
     "function-no-unknown": [
