--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -25,17 +25,9 @@ jobs:
       - name: Install All Dependencies
         run: yarn
 
-      - name: Check Formatting with Prettier
-        run: yarn format-check-all
+      - name: Lint and fix all changed files
+        run: yarn lint-staged --no-stash --diff "origin/main...HEAD"
 
-      - name: Lint JS with ESLint
-        run: yarn lint
-
-      - name: Lint CSS with Stylelint
-        run: yarn lint-css
-
-      - name: Check TypeScript compilation
-        run: yarn lint-ts
-
-      - name: Run tests
-        run: yarn test
+      - name: Commit and push changes
+        id: commit
+        run: git commit -am "Fix unlinted files" && git push
