--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -14,7 +14,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0
+          ref: ${{ github.head_ref }}
+
+      - name: Fetch main and PR history
+        run: |
+          git pull --unshallow origin ${{ github.head_ref }}
+          git fetch origin main
 
       - name: Install Node.js and use yarn
         uses: actions/setup-node@v3
@@ -25,17 +30,14 @@ jobs:
       - name: Install All Dependencies
         run: yarn
 
-      - name: Check Formatting with Prettier
-        run: yarn format-check-all
+      - name: Lint and fix all changed files
+        run: yarn lint-staged --no-stash --diff "origin/main...HEAD"
 
-      - name: Lint JS with ESLint
-        run: yarn lint
-
-      - name: Lint CSS with Stylelint
-        run: yarn lint-css
-
-      - name: Check TypeScript compilation
-        run: yarn lint-ts
-
-      - name: Run tests
-        run: yarn test
+      - name: Commit and push changes
+        id: commit
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add -A
+          git commit -m "Fix unlinted files" --no-verify
+          git push
