add --no-verify to stop infinite loop

--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -30,4 +30,4 @@ jobs:
 
       - name: Commit and push changes
         id: commit
-        run: git commit -am "Fix unlinted files" && git push
+        run: git commit -am "Fix unlinted files" --no-verify && git push
