Use push snippet from official checkout action docs
https://github.com/actions/checkout#Checkout-a-different-branch

--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -30,4 +30,9 @@ jobs:
 
       - name: Commit and push changes
         id: commit
-        run: git commit -am "Fix unlinted files" --no-verify && git push
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add -A
+          git commit -m "Fix unlinted files" --no-verify
+          git push
