--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -21,6 +21,11 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
 
+      - name: Checkout Ref
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+
       - name: Install Node.js and use yarn
         uses: actions/setup-node@v3
         with:
