--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -15,11 +15,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.sha }}
-
-      - name: Fetch main and PR history
-        run: |
-          git fetch origin main:main
-          git fetch origin ${{ github.head_ref }}:${{ github.head_ref }}
+          fetch-depth: 0
 
       - name: Install Node.js and use yarn
         uses: actions/setup-node@v3
@@ -31,7 +27,7 @@ jobs:
         run: yarn
 
       - name: Lint and fix all changed files
-        run: yarn lint-staged --no-stash --diff "main...${{ github.head_ref }}"
+        run: yarn lint-staged --no-stash --diff "origin/main...HEAD"
 
       - name: Commit and push changes
         id: commit
