--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -13,9 +13,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Fetch main and PR history
+        run: |
+          git fetch --depth=0 origin ${{ github.head_ref }}
+          git fetch --depth=0 origin main
+
+      - name: Checkout
+        uses: actions/checkout@v3
         with:
-          ref: ${{ github.event.pull_request.head.sha }}
-          fetch-depth: 0
+          ref: ${{ github.head_ref }}
 
       - name: Install Node.js and use yarn
         uses: actions/setup-node@v3
