--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -17,10 +17,7 @@ jobs:
           ref: ${{ github.head_ref }}
 
       - name: Fetch main and PR history
-        run: |
-          git fetch --unshallow origin main
-          git fetch --unshallow origin ${{ github.head_ref }}
-          git reset --hard FETCH_HEAD
+        run: git fetch origin main
 
       - name: Install Node.js and use yarn
         uses: actions/setup-node@v3
