--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -17,25 +17,27 @@ jobs:
           ref: ${{ github.head_ref }}
 
       - name: Fetch main and PR history
-        run: git fetch origin main
-
-      - name: Install Node.js and use yarn
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
-          cache: 'yarn'
-
-      - name: Install All Dependencies
-        run: yarn
-
-      - name: Lint and fix all changed files
-        run: yarn lint-staged --no-stash --diff "origin/main...HEAD"
-
-      - name: Commit and push changes
-        id: commit
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add -A
-          git commit -m "Fix unlinted files" --no-verify
-          git push
+          git fetch origin main
+          echo $(git diff origin/main...HEAD)
+
+      # - name: Install Node.js and use yarn
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: '18.x'
+      #     cache: 'yarn'
+
+      # - name: Install All Dependencies
+      #   run: yarn
+
+      # - name: Lint and fix all changed files
+      #   run: yarn lint-staged --no-stash --diff "origin/main...HEAD"
+
+      # - name: Commit and push changes
+      #   id: commit
+      #   run: |
+      #     git config user.name github-actions
+      #     git config user.email github-actions@github.com
+      #     git add -A
+      #     git commit -m "Fix unlinted files" --no-verify
+      #     git push
