--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -18,9 +18,9 @@ jobs:
 
       - name: Fetch main and PR history
         run: |
+          git pull --unshallow origin ${{ github.head_ref }}
           git fetch origin main
-          git fetch origin ${{ github.head_ref }}
-          git reset --hard origin/${{ github.head_ref }}
+          echo $(git diff origin/main...origin/${{ github.head_ref }})
           echo $(git diff origin/main...HEAD)
 
       # - name: Install Node.js and use yarn
