--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -20,26 +20,24 @@ jobs:
         run: |
           git pull --unshallow origin ${{ github.head_ref }}
           git fetch origin main
-          echo $(git diff origin/main...origin/${{ github.head_ref }})
-          echo $(git diff origin/main...HEAD)
 
-      # - name: Install Node.js and use yarn
-      #   uses: actions/setup-node@v3
-      #   with:
-      #     node-version: '18.x'
-      #     cache: 'yarn'
+      - name: Install Node.js and use yarn
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+          cache: 'yarn'
 
-      # - name: Install All Dependencies
-      #   run: yarn
+      - name: Install All Dependencies
+        run: yarn
 
-      # - name: Lint and fix all changed files
-      #   run: yarn lint-staged --no-stash --diff "origin/main...HEAD"
+      - name: Lint and fix all changed files
+        run: yarn lint-staged --no-stash --diff "origin/main...HEAD"
 
-      # - name: Commit and push changes
-      #   id: commit
-      #   run: |
-      #     git config user.name github-actions
-      #     git config user.email github-actions@github.com
-      #     git add -A
-      #     git commit -m "Fix unlinted files" --no-verify
-      #     git push
+      - name: Commit and push changes
+        id: commit
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add -A
+          git commit -m "Fix unlinted files" --no-verify
+          git push
