--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -39,5 +39,4 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add -A
-          git commit -m "Fix unlinted files" --no-verify
-          git push
+          git commit -m "Fix unlinted files" --no-verify && git push || true
