Unify linting across websites repos (#4304)
* Remove pretty-quick and improve lint-staged

* Add lint workflow

* Add scripts under iterative.ai names that workflow expects

* Re-add format script that CircleCI expects so it won't always break

* Remove run-name and add test to workflow

* Re-apply prettier+linters according to directions

* Fix only possible eslint conflict

* Remove unused override patterns

* Apply overrides to all js files and remove redundant eslint call on lint-ts

* Remove unneeded functions rule

* Add husky boilerplate

* Format css files

* Use different lint names, document, use concurrency, remove circleCI

* Use pull_request event

* Change script names again and try npx in workflow for efficiency

* Re-add yarn scripts

* Add commented Chromatic to lint-and-test and update names+docs

* Ad docs and go back to format-all

* Fix fix-all script having format-fix

* Update stylelint, removing outdated prettier plugin

* Use stylelint 14 to use prettier config

* Add new stylelint rules from iterative.ai

* Fix docs to match script name

* Update stylelint and remove newly deprecated stylelint-config-prettier

* Tweak lint-staged config and make restyled config based from it

* Remove commented out steps

* Remove unusable linters from restyled

* Remove fetch-depth

* Add yaml to prettier script

* Run fix-all on yml

* Add explicit prettier config argument to restyled

--- a/.restyled.yaml
+++ b/.restyled.yaml
@@ -1,21 +1,14 @@
 restylers:
   - name: prettier
-    arguments:
-      [
-        '--write',
-        '--arrow-parens=avoid',
-        '--print-width=80',
-        '--prose-wrap=always',
-        '--no-semi',
-        '--single-quote=true',
-        '--tab-width=2',
-        '--trailing-comma=none',
-        '--use-tabs=false'
-      ]
-    include: # matching '**/*.{js,jsx,md,tsx,ts,json}'
-      - '**/*.md'
-      - '**/*.jsx'
-      - '**/*.tsx'
+    arguments: ['--config=./.prettierrc', '--ignore-path=./.prettierignore']
+    include:
+      - '**/*.css'
       - '**/*.js'
-      - '**/*.ts'
       - '**/*.json'
+      - '**/*.jsx'
+      - '**/*.md'
+      - '**/*.mdx'
+      - '**/*.ts'
+      - '**/*.tsx'
+      - '**/*.yaml'
+      - '**/*.yml'
