--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,10 +1,8 @@
 {
-  "extends": "stylelint-config-standard",
+  "extends": ["stylelint-config-standard"],
   "rules": {
     "no-descending-specificity": null,
     "no-duplicate-selectors": null,
-    "declaration-colon-newline-after": null,
-    "value-list-comma-newline-after": null,
     "property-no-unknown": [
       true,
       {
@@ -20,9 +18,11 @@
     "at-rule-no-unknown": [
       true,
       {
-        "ignoreAtRules": ["mixin", "tailwind"]
+        "ignoreAtRules": ["mixin", "tailwind", "screen"]
       }
     ],
+    "custom-property-pattern": null,
+    "selector-id-pattern": null,
     "selector-class-pattern": null,
     "keyframes-name-pattern": null,
     "function-no-unknown": [
