--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "start": "node ./src/server.js",
     "heroku-postbuild": "heroku-deploy",
     "test": "jest",
-    "format-staged": "pretty-quick --staged --no-restage --bail --pattern '**/*.{js,jsx,md,tsx,ts,json}'",
-    "format-check": "prettier --check '**/*.{js,jsx,md,tsx,ts,json}'",
-    "format-all": "prettier --write '**/*.{js,jsx,md,tsx,ts,json}'",
     "format": "prettier --write",
-    "lint-ts": "tsc --noEmit --skipLibCheck && eslint --ext .json,.js,.ts,.tsx .",
+    "format-check-all": "prettier --check \"**/*.{js,jsx,md,tsx,ts,json,css,yml,yaml}\"",
+    "format-all": "prettier --write \"**/*.{js,jsx,md,tsx,ts,json,css,yml,yaml}\"",
+    "lint": "eslint \"**/*.{js,jsx,ts,tsx,json}\"",
+    "lint-fix": "eslint --fix \"**/*.{js,jsx,ts,tsx,json}\"",
     "lint-css": "stylelint \"src/**/*.css\"",
+    "lint-css-fix": "stylelint --fix \"src/**/*.css\"",
+    "lint-ts": "tsc --noEmit --skipLibCheck",
+    "fix-all": "yarn format-all && yarn lint-fix && yarn lint-css-fix && yarn lint-ts",
     "link-check": "repo-link-check -c config/link-check/config.yml",
     "link-check-diff": "repo-link-check -c config/link-check/config.yml -d main",
     "link-check-dev-server": "repo-link-check -c config/link-check/config.yml -r http://localhost:3000",
     "link-check-exclude": "repo-link-check -c config/link-check/config.yml --unused-patterns-only",
+    "format-staged": "lint-staged",
     "prepare": "husky install"
   },
   "repository": {
@@ -74,7 +78,6 @@
     "nanoid": "^4.0.0",
     "perfect-scrollbar": "^1.5.5",
     "postcss": "^8.4.21",
-    "pretty-quick": "^3.1.3",
     "promise-polyfill": "^8.2.3",
     "prop-types": "^15.8.1",
     "raf-polyfill": "^1.0.0",
@@ -123,12 +126,12 @@
     "babel-jest": "^29.3.1",
     "babel-plugin-transform-define": "^2.1.0",
     "babel-plugin-transform-object-assign": "^6.22.0",
-    "eslint": "^8.32.0",
+    "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-react": "^7.32.2",
     "gatsby-plugin-catch-links": "^5.4.0",
     "gatsby-plugin-feed": "^5.4.0",
     "gatsby-plugin-manifest": "^5.4.0",
@@ -152,32 +155,24 @@
     "hast-util-select": "^5.0.4",
     "husky": "^8.0.3",
     "iframe-resizer-react": "^1.1.0",
-    "jest": "^29.3.1",
-    "lint-staged": "^13.1.0",
+    "jest": "^29.4.2",
+    "lint-staged": "^13.1.1",
     "postcss-color-mod-function": "^3.0.3",
     "postcss-custom-media": "^9.0.1",
     "postcss-custom-properties": "^12.1.11",
     "postcss-mixins": "^9.0.4",
     "postcss-nested": "^6.0.0",
-    "prettier": "^2.8.3",
+    "prettier": "^2.8.4",
     "rehype-parse": "^8.0.4",
     "rehype-stringify": "^9.0.3",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "remark-parse": "^10.0.1",
-    "stylelint": "^14.16.1",
-    "stylelint-config-standard": "^29.0.0",
+    "stylelint": "^15.1.0",
+    "stylelint-config-standard": "^30.0.1",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4",
+    "typescript": "^4.9.5",
     "unist-util-remove-position": "^4.0.1"
-  },
-  "lint-staged": {
-    "*.{js,ts,tsx,json}": [
-      "eslint"
-    ],
-    "*.css": [
-      "yarn stylelint --fix"
-    ]
   },
   "cacheDirectories": [
     "node_modules"
