--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "homepage": "https://github.com/iterative/dvc.org#readme",
   "engines": {
-    "node": ">=14.x <=18.x"
+    "node": "^18.x"
   },
   "dependencies": {
     "@dvcorg/gatsby-theme-iterative": "^0.3.2",
