--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   },
   "dependencies": {
     "@dvcorg/gatsby-theme-iterative": "^0.3.3",
-    "@dvcorg/websites-server": "^0.0.19",
+    "@dvcorg/websites-server": "0.1.0-beta.0",
     "@hapi/wreck": "^18.0.0",
     "@octokit/graphql": "^5.0.4",
     "@reach/portal": "^0.18.0",
