--- a/.github/workflows/link-check-deploy.yml
+++ b/.github/workflows/link-check-deploy.yml
@@ -2,6 +2,14 @@ name: Check new links against deployment
 on:
   deployment_status:
 jobs:
+  test-run:
+    runs-on: ubuntu-latest
+    steps:
+      - name: log event
+        run: |
+          echo "${{ toJSON(github.event.deployment) }}"
+          echo "${{ toJSON(github.event.deployment_status) }}"
+
   run:
     if:
       ${{ github.event.deployment.ref != github.event.repository.default_branch
