update packages to fix issue

--- a/package.json
+++ b/package.json
@@ -64,7 +64,6 @@
     "gatsby": "^5.4.2",
     "gatsby-plugin-algolia": "^1.0.3",
     "gatsby-plugin-image": "^3.11.0",
-    "gatsby-plugin-sharp": "^5.11.0",
     "gatsby-source-rss-feed": "^1.2.2",
     "github-markdown-css": "^5.2.0",
     "http-proxy-middleware": "^2.0.6",
@@ -72,7 +71,6 @@
     "isomorphic-fetch": "^3.0.0",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
-    "mkdirp": "^3.0.1",
     "moment": "^2.29.4",
     "nanoid": "^4.0.2",
     "perfect-scrollbar": "^1.5.5",
@@ -97,7 +95,6 @@
     "reset-css": "^5.0.1",
     "s3-client": "^4.4.2",
     "scroll": "^3.0.1",
-    "sharp": "^0.32.1",
     "slick-carousel": "^1.8.1",
     "title-case": "^3.0.3",
     "typed.js": "^2.0.16",
@@ -107,6 +104,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
+    "@babel/plugin-syntax-class-static-block": "^7.14.5",
     "@svgr/webpack": "^8.0.1",
     "@types/classnames": "^2.3.1",
     "@types/isomorphic-fetch": "^0.0.36",
@@ -150,7 +148,6 @@
     "gatsby-remark-smartypants": "^6.11.0",
     "gatsby-source-filesystem": "^5.11.0",
     "gatsby-transformer-remark": "^6.11.0",
-    "gatsby-transformer-sharp": "^5.11.0",
     "hast-util-select": "^5.0.5",
     "husky": "^8.0.3",
     "iframe-resizer-react": "^1.1.0",
