--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-json": "3.1.0",
     "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-prettier": "5.0.0-alpha.2",
     "eslint-plugin-react": "7.32.2",
     "gatsby-source-filesystem": "5.11.0",
     "husky": "8.0.3",
@@ -106,6 +106,7 @@
     "remark": "14.0.3",
     "remark-html": "15.0.2",
     "stylelint": "15.10.1",
+    "stylelint-config-standard": "34.0.0",
     "typescript": "5.1.6",
     "webpack-filter-warnings-plugin": "1.2.1"
   },
